--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<p style="text-align: left;"></p>
+<!DOCTYPE html>
+<html>
+<head>
+    <title></title>
+</head>
+<body>
+    <header>
+    </header>
+    <footer>
+    </footer>
+</body>
+</html>
